# FinGuard-ML

./: .env.template  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
models/: XGBoost_model.joblib
notebooks/: 01_data_exploration.ipynb  02_eda_and_cleaning.ipynb  02_metrics_&_thresholds.ipynb  02_metrics_thresholds.ipynb  03_error_analysis.ipynb  03_feature_engineering.ipynb  04_model_training.ipynb  05_model_explainability.ipynb
sql/: 01_create_schemas.sql  02_create_tables.sql  03_indexes_constraints.sql  04_create_warehouse_staging_table.sql  README.md
src/: config.py  data_loading.py  ingest.py  merge.py  pipeline.py  preprocess.py  visualization.py
