[project]
name = "finguard-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "joblib>=1.5.2",
    "lime>=0.2.0.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "xgboost>=3.1.1",
]
